# drp_qa

./: .gitignore  README.md  SConstruct  fluxCalQA.py  pyproject.toml  setup.cfg
bin.src/: detectorMapQa.py  extractionQa.py  fiberNormsQa.py  fluxCalQa.py  plotFiberNorms.py  takahashiFiberNormsQa.py
examples/: QA Pipelines.ipynb  check_fiberProfiles.ipynb
pipelines/: detectorMapQa.yaml  drpQA.yaml  extractionQa.yaml  qa.yaml
python/pfs/drp/qa/: detectorMapQa.py  detectorMapResiduals.py  dmCombinedResiduals.py  dmResiduals.py  extractionQa.py  extractionQaCombined.py  fiberNormsQa.py  fluxCalQa.py  formatters.py  imageQualityCombinedQa.py  imageQualityQa.py  imageQualityQaSummary.py  skySubtractionQa.py  storageClasses.py  takahashiFiberNormsQa.py
python/pfs/drp/qa/fluxCal/: fluxCalQA.py  stellarMags.npy
python/pfs/drp/qa/skySubtraction/: generatePlots.py  plot.py  prepare.py  skySubtractionQa.py  summaryPlots.py
python/pfs/drp/qa/tasks/: detectorMapResiduals.py  fiberExtraction.py  fluxCalibration.py  overlapRegionLines.py
python/pfs/drp/qa/utils/: formatters.py  helpers.py  math.py  plotting.py
python/pfs/qa/: detectorMapQa.py  utils.py
python/pfs/qa/utils/: helpers.py  plotting.py  stability.py
ups/: drp_qa.table
